--- a/style.css
+++ b/style.css
@@ -1,24 +1,84 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+  }
+
+  body {
+    margin:0px;
+    padding:0px;
+    font-family: "Manrope", sans-serif;
+    background-color: rgb(230, 240, 240);
+  }
+
 .container {
     display: flex;
+    width:100vw;
     flex-direction: row;
-    width: 1000px;
-    margin-left: 220px;
-    margin-top: 20px;
-    gap:10px;
-    background-color: rgb(228, 151, 44);
-    border:5px blanchedalmond solid;
 }
 
-img {  
-    max-height: 680px;  
-    width: 450px;  
-    }  
+img {
+    height: 55vw;
+    width: 40vw;
+}
 
 form {
     display: flex;
-    flex-direction: column;
+    width:60vw;
+    flex-flow: row wrap;
+    gap:60px;
+    padding:40px;
+    background-color: rgb(251, 253, 255);
+    font-size: 20px;
+    font-weight: 200;
 }
 
 .right-section {
+    width:60vw;
+    
+}
+
+.info {
+    font-size:25px;
+    font-weight:500;
     margin-top: 50px;
+    padding:40px 40px 10px 40px;
+}
+
+input {
+    margin-bottom: 30px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 210px;
+    height: 40px;
+    padding: 5px;
+}
+
+label {
+    margin-bottom: 5px;
+}
+
+
+form div {
+    display: flex;
+    flex-direction: column;
+    width: 220px;
+}
+
+.submit-cont {
+    padding: 40px;
+    text-align: center;
+}
+
+button {
+    width: 180px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 20px;
+    background-color: rgb(227, 102, 102);
+    color:rgb(251, 253, 255);
 }
