add styling add password confirmation

--- a/style.css
+++ b/style.css
@@ -19,9 +19,15 @@ html, body {
     flex-direction: row;
 }
 
-img {
+.img-container {
     height: 55vw;
     width: 40vw;
+    background-image: url(elia-pellegrini-C54fuJ5E8YU-unsplash.jpg);
+    background-size: cover;
+    display: flex;
+    justify-content:center;
+    color: rgb(255, 255, 255);
+    align-items: center;
 }
 
 form {
@@ -30,21 +36,22 @@ form {
     flex-flow: row wrap;
     gap:60px;
     padding:40px;
-    background-color: rgb(251, 253, 255);
     font-size: 20px;
     font-weight: 200;
+    
 }
 
 .right-section {
     width:60vw;
+    justify-content: center;
     
 }
 
 .info {
     font-size:25px;
     font-weight:500;
-    margin-top: 50px;
-    padding:40px 40px 10px 40px;
+    padding:20px 40px 5px 40px;
+    line-height: 1.4;
 }
 
 input {
@@ -53,7 +60,7 @@ input {
     border-radius: 4px;
     box-sizing: border-box;
     width: 210px;
-    height: 40px;
+    height: 35px;
     padding: 5px;
 }
 
@@ -66,19 +73,49 @@ form div {
     display: flex;
     flex-direction: column;
     width: 220px;
+    align-items: flex-start;
 }
 
 .submit-cont {
     padding: 40px;
-    text-align: center;
 }
 
 button {
-    width: 180px;
-    padding: 10px;
+    width: 250px;
+    padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
     font-size: 20px;
-    background-color: rgb(227, 102, 102);
+    background-color: rgb(150, 100, 50);
     color:rgb(251, 253, 255);
+    font-weight: 500;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.200);
+}
+
+input:focus {
+    outline:none;
+    box-shadow:4px 4px 5px rgba(0, 0, 0, 0.342);
+}
+
+button:hover {
+    background-color: rgb(123, 81, 38);
+}
+
+.text {
+    background-color: rgba(0, 0, 0, 0.400);
+    font-size: 30px;
+    position:absolute;
+    top:82%;
+    width: 40vw;
+    text-align: center;
+    padding:30px 0px;
+}
+
+
+.form {
+    background-color: rgb(251, 253, 255);
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.200);
+    font-size: 20px;
+    padding-top: 10px;
 }
