--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html, body {
 
 .img-container {
     flex:1;
-    height: 55vw;
+    height: 100vh;
     width: 40vw;
     background-image: url(elia-pellegrini-C54fuJ5E8YU-unsplash.jpg);
     background-size: cover;
